# diffusion-pipeline

./: README.md  pyproject.toml
diffusion/: main.py
diffusion/components/: scheduler.py  simple_unet.py  unet.py  vae.py
simple_unet/: simple_unet.py  train.py
unet_train/: train.py
