[tool.poetry]
name = "diffusion-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
diffusers = "^0.31.0"
accelerate = "^1.1.1"
transformers = "^4.46.0"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
